--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 2,
 	"name": "Kurotodon",
-	"version": "0.3.1",
+	"version": "0.3.3",
 	"author": "KEN1",
 	"description": "__MSG_manifest_description__",
 	"default_locale": "en",
@@ -31,5 +31,11 @@
 		"tabs",
 		"http://*/*",
 		"https://*/*"
-	]
+	],
+  "applications": {
+    "gecko": {
+      "id": "kurotodon@oreolek.ru",
+      "strict_min_version": "48.0"
+    }
+  }
 }
